testsuite/escript/func/func015-module-function-conflict.err
func015-module-function-conflict.src:1:1: error: User Function 'Broadcast' conflicts with Module Function of the same name.