testsuite/escript/func/func015-module-function-conflict.src
function Broadcast() endfunction
use uo;
